Import of GUNYA/Algorithm-BinPack-2D-0.02 from CPAN.
gitpan-cpan-distribution: Algorithm-BinPack-2D
gitpan-cpan-version:      0.02
gitpan-cpan-path:         GUNYA/Algorithm-BinPack-2D-0.02.tar.gz
gitpan-cpan-author:       GUNYA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -56,6 +56,11 @@ SEE ALSO
     `Algorithm::BinPack'
 
 AUTHOR
-    Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-cpan@titech.ac<gt>
+    Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-cpan ATAT titech.ac>
 
 LICENSE
+    Copyright (C) Tasuku SUENAGA a.k.a. gunyarakun
+
+    This library is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself. =cut
+
