--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Algorithm::BinPack::2D
 
+0.02    Thu Jan 28 21:00:08 2013
+    - Add LICENSE to POD
+
 0.01    Thu Jan 28 19:28:34 2013
     - Initial version
